# A.R.K.-v6.5---Dimensional-Verifier-Implementation

./: .gitignore  README.md  ark6_config.yaml  benchmark.py  pyproject.toml
ark6/: __init__.py  audit.py  calibration.py  config.py  controller.py  gate.py  protocols.py
data/: sample_benchmark.json
scripts/: benchmark_ark.py
src/ark/: __init__.py  models.py  protocols.py
tests/: test_protocols.py
